# Roly

./: .gitignore  README.md  README_DEV.md  pyproject.toml
.github/workflows/: release.yml
custom/: skill.md
docs/: design_spec.md  intro_prompt.md  system_proposal.md
examples/: review_code-review_20260101T000000Z.md  roly.config
src/rollie/: __init__.py  cli.py
src/roly/: __init__.py  assembler.py  cli.py  config.py  context.py  diffing.py  errors.py  models.py  paths.py  review.py  role_parser.py  role_store.py  setup.py  ui.py
src/roly/builtin/sub_roles/: code-review.md  project-audit.md
src/roly/builtin/top_level/: reviewer.md
tests/: test_assembler.py  test_cli.py  test_config.py  test_context.py  test_main.py  test_review.py  test_role_parser.py  test_role_store.py
