[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rollie"
version = "0.1.0"
description = "A CLI tool example package"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Rollie Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
rollie = "rollie.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[tool.ruff]
# Set the target Python version
target-version = "py312"

# Line length matching PEP 8
line-length = 88

# Exclude directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle (for numpy-style docstrings)
]

# Ignore specific rules
ignore = [
    "D100",  # Missing docstring in public module (can be enabled if desired)
]

[tool.ruff.lint.pydocstyle]
# Use numpy-style docstrings
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in test files
"tests/*" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
