[project]
name = "roly"
version = "0.1.0"
description = "Deterministic role assembly for coding-agent workflows."
readme = "README.md"
authors = [{ name = "Sean Mullan", email = "default@default.com" }]
requires-python = ">=3.12"
dependencies = ["rich>=14,<15", "typer>=0.20,<0.21"]

[project.urls]
Homepage = "https://github.com/Mullans/roly"

[project.scripts]
roly = "roly:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "ANN",
    "B",
    "C4",
    "D",
    "I",
    "PERF",
    "PIE",
    "PT",
    "RET",
    "S",
    "SIM",
    "UP",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "ARG001", "D", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--cov=roly",
    "--cov-report=term-missing",
    "--cov-report=html:tests_output/htmlcov",
    "--html=tests_output/pytest-report.html",
    "--self-contained-html",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["roly"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[dependency-groups]
dev = [
    "cairosvg>=2.8.2",
    "pycairo>=1.29.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.2.0",
    "ruff>=0.15.0",
]
